--- a/demo/vaadin-router-lifecycle-callbacks-demos.html
+++ b/demo/vaadin-router-lifecycle-callbacks-demos.html
@@ -8,40 +8,68 @@
 
     <h3>Lifecycle Callbacks</h3>
     <p>
-      All Web Components in Vaadin.Router follow the same lifecycle. <em>Lifecycle
-      callbacks</em> allow adding custom logic to any point of it:
+      Vaadin.Router manages the lifecycle of all route Web Components.
+      <em>Lifecycle callbacks</em> allow you to add custom logic to any point of
+      this lifecycle:
       <ul>
-        <li><b><code>onBeforeEnter(context): Promise | Cancel | Redirect | void</code></b></li>
-        <li><b><code>onAfterEnter(context): Promise | void</code></b></li>
-        <li><b><code>onBeforeLeave(context): Promise | Cancel | void</code></b></li>
-        <li><b><code>onAfterLeave(context): Promise | void</code></b></li>
+        <li>
+          <b><code>
+          <a href="..#/classes/Vaadin.WebComponentInterface#method-onBeforeEnter">
+          onBeforeEnter(location, commands, router)</a>: Promise | Prevent | Redirect |
+          void</code></b>
+        </li>
+        <li>
+          <b><code>
+          <a href="..#/classes/Vaadin.WebComponentInterface#method-onAfterEnter">
+          onAfterEnter(location, commands, router)</a>: void</code></b>
+        </li>
+        <li>
+          <b><code>
+          <a href="..#/classes/Vaadin.WebComponentInterface#method-onBeforeLeave">
+          onBeforeLeave(location, commands, router)</a>: Promise | Prevent | void
+          </code></b>
+        </li>
+        <li>
+          <b><code>
+          <a href="..#/classes/Vaadin.WebComponentInterface#method-onAfterLeave">
+            onAfterLeave(location, commands, router)</a>: void</code></b>
+        </li>
         <hr/>
-        <li>the <code>'vaadin-router-route-changed'</code> / <code>'vaadin-router-error'</code>
-          events on the <code>window</code></li>
+        <li>
+          the <code>'vaadin-router-location-changed'</code> /
+          <code>'vaadin-router-error'</code> events on the <code>window</code>
+        </li>
       </ul>
-      Vaadin.Router lifecycle callbacks can be defined as methods on the Web Component
+      Vaadin.Router lifecycle callbacks can be defined as methods on the route
+      Web Component
       <a href="https://html.spec.whatwg.org/multipage/custom-elements.html#custom-element-definition"
       target="_blank" rel="noopener">class definition</a> in a similar way as
-      native custom element callbacks (like <code>disconnectedCallback()</code>).
+      the native custom element callbacks (like
+      <code>disconnectedCallback()</code>).
     </p>
-    <h3><code>onBeforeEnter(context)</code></h3>
+
+    <h3><code>onBeforeEnter(location, commands, router)</code></h3>
     <p>
-      The component has matched the current path, the instance has been created and is about
-      to be rendered to the DOM. At this point there is no guarantee that the navigation
-      into the view will actually happen (because another callback may interfere).
+      The component's route has matched the current path, an instance of the
+      component has been created and is about to be inserted into the DOM. Use
+      this callback to create a route guard (e.g. redirect to the login page
+      if the user is not logged in).
     </p>
     <p>
-      This callback may return special values to produce following effects:
+      At this point there is yet <strong>no guarantee that the navigation into
+      this view will actually happen</strong> because another route's callback
+      may interfere.
     </p>
-    <ul>
-      <li>prevent navigation to the view: <b><code>return context.cancel()</code></b></li>
-      <li>redirect to the different path: <b><code>return context.redirect('/new/path')</code></b></li>
-      <li>delay navigation and rendering: <b><code>return new Promise(...)</code></b></li>
-      <li>any other return value is ignored, and the navigation continues.</li>
-    </ul>
     <p>
-      See <a href="../#/classes/Vaadin.WebComponentInterface#method-onBeforeEnter" target="_blank">
-      API documentation</a> for the available <code>context</code> object properties.
+      This callback may return a <em>redirect</em> (<code>return
+      commands.redirect('/new/path')</code>) or a <em>prevent</em> (<code>return
+      commands.prevent()</code>) router command. If it returns a promise, the
+      router waits until the promise is resolved before proceeding with the
+      navigation.
+    </p>
+    <p>
+      See the <a href="../#/classes/Vaadin.WebComponentInterface#method-onBeforeEnter">
+      API documentation</a> for more details.
     </p>
     <vaadin-demo-snippet id="vaadin-router-lifecycle-events-demos-1" iframe-src="iframe.html">
       <template preserve-content>
@@ -100,24 +128,21 @@
         </dom-module>
       </template>
     </vaadin-demo-snippet>
-    <h3><code>onAfterEnter(context)</code></h3>
+
+    <h3><code>onAfterEnter(location, commands, router)</code></h3>
     <p>
-      The element has matched the current path and has been rendered. At
-      this point it is certain that navigation won't be prevented or redirected.
-      This callback is called asynchronously after the native
-      <a href="https://html.spec.whatwg.org/multipage/custom-elements.html#custom-element-reactions"
-      target="_blank" rel="noopener"><b><code>connectedCallback()</code></b></a> defined by the Custom Elements spec.
+      The component's route has matched the current path and an instance of the
+      component has been rendered into the DOM. At this point it is certain that
+      navigation won't be prevented or redirected. Use this callback to
+      process route params and initialize the view so that it's ready for user
+      interactions.
     </p>
     <p>
-      This callback has the following restrictions:
+      Any value returned from this callback is ignored.
     </p>
-    <ul>
-      <li>may not prevent nor redirect navigation,</li>
-      <li>can return a <b>Promise</b>, but it won't delay the rendering.</li>
-    </ul>
     <p>
-      See <a href="../#/classes/Vaadin.WebComponentInterface#method-onAfterEnter" target="_blank">
-      API documentation</a> for the available <code>context</code> object properties.
+      See the <a href="../#/classes/Vaadin.WebComponentInterface#method-onAfterEnter">
+      API documentation</a> for more details.
     </p>
     <vaadin-demo-snippet id="vaadin-router-lifecycle-events-demos-2" iframe-src="iframe.html">
       <template preserve-content>
@@ -157,36 +182,36 @@
         </dom-module>
       </template>
     </vaadin-demo-snippet>
-    <h3><code>onBeforeLeave(context)</code></h3>
+
+    <h3><code>onBeforeLeave(location, commands, router)</code></h3>
     <p>
-      The element does not match the current path anymore and is about to be
-      removed from the DOM. Even if this callback does not prevent the navigation, at
-      this point there is no guarantee that the navigation away from the
-      view will actually happen (because another callback may also interfere).
+      The component's route does not match the current path anymore and the
+      component is about to be removed from the DOM. Use this callback to
+      prevent the navigation if necessary like in the demo below. Note that the
+      user is still able to copy and open that URL manually in the browser.
     </p>
     <p>
-      This callback may return special values to produce following effects:
-    </p>
-    <ul>
-      <li>prevent navigation to the view: <code>return context.cancel()</code></li>
-      <li>delay the component removal: <code>return new Promise(...)</code></li>
-      <li>any other return value is ignored, and the navigation continues.</li>
-    </ul>
-    <p>
-      See <a href="../#/classes/Vaadin.WebComponentInterface#method-onBeforeLeave" target="_blank">
-      API documentation</a> for the available <code>context</code> object properties.
+      Even if this callback does not prevent the navigation, at this point there
+      is yet <strong>no guarantee that the navigation away from this view will
+      actually happen</strong> because another route's callback may also
+      interfere.
     </p>
     <p>
-      The demo below illustrates how to protect the user from switching to the different URL
-      without performing some needed actions while staying within current view. Note that
-      the user is still able to copy and open that URL manually in the browser.
+      This callback may return a <em>prevent</em> (<code>return
+      commands.prevent()</code>) router command. If it returns a promise, the
+      router waits until the promise is resolved before proceeding with the
+      navigation.
+    </p>
+    <p>
+      See the <a href="../#/classes/Vaadin.WebComponentInterface#method-onBeforeLeave">
+      API documentation</a> for more details.
     </p>
     <vaadin-demo-snippet id="vaadin-router-lifecycle-events-demos-3" iframe-src="iframe.html">
       <template preserve-content>
         <dom-module id="x-user-manage">
           <template>
             <h1>Manage user</h1>
-            <p>User name: [[route.params.user]]</p>
+            <p>User name: [[location.params.user]]</p>
             <a href="/user/delete">Delete user</a>
           </template>
         </dom-module>
@@ -194,10 +219,10 @@
         <script>
           Polymer({
             is: 'x-user-manage',
-            onBeforeLeave: function(context) {
-              if (context.pathname.indexOf('user/delete') > 0) {
+            onBeforeLeave: function(location, commands) {
+              if (location.pathname.indexOf('user/delete') > 0) {
                 if (!window.confirm('Are you sure you want to delete this user?')) {
-                  return context.cancel();
+                  return commands.prevent();
                 }
               }
             }
@@ -221,24 +246,22 @@
         </script>
       </template>
     </vaadin-demo-snippet>
-    <h3><code>onAfterLeave(context)</code></h3>
+
+    <h3><code>onAfterLeave(location, commands, router)</code></h3>
     <p>
-      The element does not match the current path anymore and is about to be
-      removed from the DOM. When this callback is executed, the navigation cannot be interrupted anymore.
+      The component's route does not match the current path anymore and the
+      component has been removed from the DOM. At this point it is certain that
+      navigation won't be prevented. Use this callback to clean-up and perform
+      any custom actions that leaving a view should trigger. For example, the
+      demo below auto-saves any unsaved changes when the user navigates away
+      from the view.
     </p>
     <p>
-      This callback may return special values to produce following effects:
-    </p>
-    <ul>
-      <li>delay the component removal: <code>return new Promise(...)</code></li>
-      <li>any other return value is ignored, and the navigation continues.</li>
-    </ul>
-    <p>
-      See <a href="../#/classes/Vaadin.WebComponentInterface#method-onAfterLeave" target="_blank">
-      API documentation</a> for the available <code>context</code> object properties.
+      Any value returned from this callback is ignored.
     </p>
     <p>
-      The demo below illustrates how is it possible to autosave changes when navigating away from the view.
+      See the <a href="../#/classes/Vaadin.WebComponentInterface#method-onAfterLeave">
+      API documentation</a> for more details.
     </p>
     <vaadin-demo-snippet id="vaadin-router-lifecycle-events-demos-4" iframe-src="iframe.html">
       <template preserve-content>
@@ -281,49 +304,11 @@
       </template>
     </vaadin-demo-snippet>
 
-    <h3>Prevent Navigation Using <code>onBeforeEnter(context)</code></h3>
-    <p>
-      The navigation can also be prevented by returning the same result from <code>onBeforeEnter()</code> callback.
-      Another option is to redirect the user from this callback: <code>return context.redirect('/new/path')</code>.
-      See the <a href="#vaadin-router-redirect-demos">Redirect</a> section for detailed example.
-    </p>
-    <vaadin-demo-snippet id="vaadin-router-lifecycle-events-demos-5" iframe-src="iframe.html">
-      <template preserve-content>
-        <a href="/">Home</a>
-        <a href="/danger">Danger</a>
-        <div id="outlet"></div>
-        <script>
-          Polymer({
-            is: 'x-dangerous',
-            onBeforeEnter: function(context) {
-              if (!confirm('Do you really want to know it?')) {
-                return context.cancel();
-              }
-            }
-          });
-          // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // const Router = Vaadin.Router; // for vaadin-router.umd.js
-
-          const router = new Router(document.getElementById('outlet'));
-          router.setRoutes([
-            {path: '/', component: 'x-home-view'},
-            {path: '/danger', component: 'x-dangerous'}
-          ]);
-        </script>
-        <dom-module id="x-dangerous">
-          <template>
-            <h1>Santa Claus Doesn't Exist</h1>
-            <p>Sorry.</p>
-          </template>
-        </dom-module>
-      </template>
-    </vaadin-demo-snippet>
-
     <h3>Listen to Global Navigation Events</h3>
     <p>
       In order to react to route changes in other parts of the app (outside of
       route components), you can add an event listener for the <code>
-      vaadin-router-route-changed</code> events on the <code>window</code>.
+      vaadin-router-location-changed</code> events on the <code>window</code>.
       Vaadin.Router dispatches such events every time after navigating to a
       new path.
     </p>
@@ -337,9 +322,9 @@
         <div id="outlet"></div>
 
         <script>
-          window.addEventListener('vaadin-router-route-changed', (event) => {
+          window.addEventListener('vaadin-router-location-changed', (event) => {
             const breadcrumbs = document.querySelector('#breadcrumbs');
-            breadcrumbs.innerHTML = `You are at '${event.detail.pathname}'`;
+            breadcrumbs.innerHTML = `You are at '${event.detail.location.pathname}'`;
           });
 
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
@@ -357,20 +342,22 @@
     </vaadin-demo-snippet>
     <p>
       In case if navigation fails for any reason (e.g. if no route matched the
-      given pathname), instead of the <code>vaadin-router-route-changed</code>
+      given pathname), instead of the <code>vaadin-router-location-changed</code>
       event Vaadin.Router dispatches <code>vaadin-router-error</code> and
       attaches the error object to the event as <code>event.detail.error</code>.
     </p>
 
-    <h3>Getting the Currently Active Routes Chain</h3>
+    <h3>Getting the Current Location</h3>
     <p>
       When handling Vaadin Router events, you can access the router instance via
-      <code>event.detail.router</code>. For example, the <em>active routes chain
-      </em> API of Vaadin.Router is available via the <code>activeRoutes</code>
-      property of a <code>router</code> object. It is a read-only list of routes
-      that correspond to the last completed navigation, which  may be useful for
-      example when creating a breadcrumbs component to visualize the current
-      in-app location.
+      <code>event.detail.router</code>, and the current location via <code>
+      event.detail.location</code> (which is a shorthand for
+      <code>event.detail.router.location</code>). The
+      <a href="..#/classes/Vaadin.Router.Location"><code>location</code></a>
+      object has all details about the current router state. For example,
+      <code>location.routes</code> is a read-only list of routes that correspond
+      to the last completed navigation, which may be useful for example when
+      creating a breadcrumbs component to visualize the current in-app location.
     </p>
     <vaadin-demo-snippet id="vaadin-router-lifecycle-events-demos-7" iframe-src="iframe.html">
       <template preserve-content>
@@ -381,12 +368,12 @@
         <div id="outlet"></div>
 
         <script>
-          window.addEventListener('vaadin-router-route-changed', (event) => {
+          window.addEventListener('vaadin-router-location-changed', (event) => {
             const router = event.detail.router;
-            const params = event.detail.params;
+            const params = event.detail.location.params;
 
             const breadcrumbs = document.querySelector('x-breadcrumbs');
-            breadcrumbs.items = router.activeRoutes
+            breadcrumbs.items = router.location.routes
               .filter(route => !!route.xBreadcrumb)
               .map(route => {
                 return {
@@ -417,7 +404,7 @@
       The router configuration allows you to add any custom properties to route
       objects. The example above uses that to set a custom <code>xBreadcrumb</code>
       property on the routes that we want to show up in breadcrumbs. That
-      property is used later when processing the <code>vaadin-router-route-changed
+      property is used later when processing the <code>vaadin-router-location-changed
       </code> events.
     </p>
   </template>
