--- a/demo/vaadin-router-lifecycle-callbacks-demos.html
+++ b/demo/vaadin-router-lifecycle-callbacks-demos.html
@@ -142,8 +142,10 @@
       callback on the new view's component is called <em>before</em> the
       <code>onAfterLeave</code> callback on the previous view's component (which
       is being removed). At some point both the new and the old view components
-      are present in the DOM to allow animating the transition (you can listen
-      to the <code>animationend</code> event to detect when it is over).
+      are present in the DOM to allow
+      <a href="#vaadin-router-animated-transitions-demos">animating</a> the
+      transition (you can listen to the <code>animationend</code> event to
+      detect when it is over).
     </p>
     <p>
       Any value returned from this callback is ignored.
@@ -256,7 +258,8 @@
     <h3><code>onAfterLeave(location, commands, router)</code></h3>
     <p>
       The component's route does not match the current path anymore and the
-      component has been removed from the DOM. At this point it is certain that
+      component's removal from the DOM has been started (it will be removed
+      after a transition animation, if any). At this point it is certain that
       navigation won't be prevented. Use this callback to clean-up and perform
       any custom actions that leaving a view should trigger. For example, the
       demo below auto-saves any unsaved changes when the user navigates away
@@ -267,8 +270,10 @@
       callback on the new view's component is called <em>before</em> the
       <code>onAfterLeave</code> callback on the previous view's component (which
       is being removed). At some point both the new and the old view components
-      are present in the DOM to allow animating the transition (you can listen
-      to the <code>animationend</code> event to detect when it is over).
+      are present in the DOM to allow
+      <a href="#vaadin-router-animated-transitions-demos">animating</a> the
+      transition (you can listen to the <code>animationend</code> event to
+      detect when it is over).
     </p>
     <p>
       Any value returned from this callback is ignored.
