change wording a bit to make the message more correct

--- a/demo/vaadin-router-lifecycle-callbacks-demos.html
+++ b/demo/vaadin-router-lifecycle-callbacks-demos.html
@@ -138,7 +138,7 @@
       interactions.
     </p>
     <p>
-      NOTE: When navigation from one view to another the <code>onAfterEnter</code>
+      NOTE: When navigating between views the <code>onAfterEnter</code>
       callback on the new view's component is called <em>before</em> the
       <code>onAfterLeave</code> callback on the previous view's component (which
       is being removed). At some point both the new and the old view components
@@ -266,7 +266,7 @@
       from the view.
     </p>
     <p>
-      NOTE: When navigation from one view to another the <code>onAfterEnter</code>
+      NOTE: When navigating between views the <code>onAfterEnter</code>
       callback on the new view's component is called <em>before</em> the
       <code>onAfterLeave</code> callback on the previous view's component (which
       is being removed). At some point both the new and the old view components
