--- a/test/index.coverage.html
+++ b/test/index.coverage.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>Vaadin.Router Unit Tests</title>
+  <title>Vaadin Router Unit Tests</title>
   <!--
     We can use npm package in tests, but in the demos we still need HTML Imports support.
     This is the only reason to use Bower for the vaadin-router package.
