--- a/test/router/lifecycle-events.spec.html
+++ b/test/router/lifecycle-events.spec.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Vaadin.Router Livecycle Events spec</title>
+  <title>Vaadin Router Livecycle Events spec</title>
   <script src="../../bower_components/web-component-tester/browser.js"></script>
   <script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <script src="../../dist/vaadin-router.umd.js"></script>
@@ -61,7 +61,7 @@
       return component;
     };
 
-    describe('Vaadin.Router lifecycle events', function() {
+    describe('Vaadin Router lifecycle events', function() {
       const {
         verifyActiveRoutes,
         onAfterEnterAction,
