--- a/demo/vaadin-router-route-actions-demos.html
+++ b/demo/vaadin-router-route-actions-demos.html
@@ -14,14 +14,14 @@
     <p>
       Route resolution is an async operation started by a navigation event, or
       by an explicit <code>render()</code> method call. In that process
-      Vaadin.Router goes through the routes config and tries to <em>resolve</em>
+      Vaadin Router goes through the routes config and tries to <em>resolve</em>
       each matching route from the root onwards. The default route resolution
       rule is to create and return an instance of the route's <code>component
       </code> (see the API docs for the <code>setRoutes()</code> method for
       details on other route properties and how they affect the route resolution).
     </p>
     <p>
-      Vaadin.Router provides a flexible API to customize the default route
+      Vaadin Router provides a flexible API to customize the default route
       resolution rule. Each route may have an <code>action</code> functional
       property that defines how exactly that route is resolved. An <code>action
       </code> function may or may not return a value. If it does, that completes
@@ -59,7 +59,7 @@
           <code>return commands.component('tag-name')</code> create and return a
           new <code>HTMLElement</code> that will be rendered into the router
           outlet. Using the <code>component</code> command ensures that the
-          created component is initialized as a Vaadin.Router view (i.e. the
+          created component is initialized as a Vaadin Router view (i.e. the
           <code>location</code> property is set according to the current router
           context.
           <br/>
