--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>Vaadin.Router Integration Tests</title>
+  <title>Vaadin Router Integration Tests</title>
 
   <!--
     We can use npm package in tests, but in the demos we still need HTML Imports support.
