--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -1458,21 +1458,13 @@
           });
         });
 
-        describe('vaadin-router-meta', () => {
-          let router;
+        describe('window.Vaadin.registrations', () => {
+          it('should contain a single record for the Vaadin Router usage', () => {
+            const registrations = window.Vaadin.registrations.filter(
+              reg => reg.is === '@vaadin/router');
 
-          beforeEach(() => {
-            router = new Vaadin.Router(outlet);
-          });
-
-          afterEach(() => {
-            router.unsubscribe();
-          });
-
-          it('should expose the version on the `vaadin-router-meta` custom element class', async() => {
-            const meta = customElements.get('vaadin-router-meta');
-            expect(meta).to.be.not.empty;
-            expect(meta.version).to.be.string;
+            expect(registrations).to.have.lengthOf(1);
+            expect(registrations[0]).to.have.property('version').that.is.a.string;
           });
         });
       });
