fix an unstable test for animated transitions
in IE11 Mutation Observer is not very predictable

--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -1444,7 +1444,7 @@
             await router.render('/animate');
 
             // FIXME(web-padawan): force IE11 to pick up mutations
-            if (/Trident/.test(navigator.userAgent)) {
+            if (/Trident/.test(navigator.userAgent) && data.length !== 4) {
               data = observer.takeRecords();
             }
 
