--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -1439,6 +1439,23 @@
 
             expect(outlet.children[0].tagName).to.match(/x-c/i);
           });
+
+          it('should work together with the route.action() function', async() => {
+            router.setRoutes([
+              {
+                path: '/',
+                action: (context, {component}) => {
+                  return component('x-main-layout');
+                },
+                children: () => [
+                  {path: '/', component: 'x-home-view'},
+                ]
+              },
+            ]);
+
+            await router.render('/');
+            checkOutlet(['x-main-layout', 'x-home-view']);
+          });
         });
 
         describe('animated transitions', () => {
