--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -1116,10 +1116,36 @@
             expect(getBundleScripts(existingBundlePath).length).to.equal(1);
           });
 
-          it('context.redirect() should work when invoked without the `this` context', async() => {
+          it('should match routes with trailing slashes', async() => {
+            router.setRoutes([
+              {path: '/', component: 'x-a'},
+              {path: '/child', children: [
+                {path: '/', component: 'x-b'},
+                {path: '/page/', component: 'x-c'}
+              ]},
+            ]);
+
+            await router.render('/');
+            checkOutlet(['x-a']);
+
+            await router.render('/child/');
+            checkOutlet(['x-b']);
+
+            await router.render('/child/page/');
+            checkOutlet(['x-c']);
+          });
+        });
+
+        describe('route.action (function)', () => {
+          let router;
+          beforeEach(() => {
+            router = new Vaadin.Router(outlet);
+          });
+
+          it('commands.redirect() should work when invoked without the `this` context', async() => {
             router.setRoutes([
               {path: '/', component: 'x-home-view'},
-              {path: '/a', action: (context, commands) => commands.redirect('/')}
+              {path: '/a', action: (context, {redirect}) => redirect('/')}
             ]);
 
             await router.render('/a');
@@ -1127,7 +1153,7 @@
             expect(outlet.children[0].tagName).to.match(/x-home-view/i);
           });
 
-          it('action with redirect has its context.redirectFrom and redirect.from populated correctly', async() => {
+          it('commands.redirect() should update redirect.from and the next action\'s context.redirectFrom', async() => {
             const from = '/a/b/c';
 
             router.setRoutes([
@@ -1150,7 +1176,7 @@
             expect(outlet.children[0].tagName).to.match(/x-home-view/i);
           });
 
-          it('action with redirect gets double slashes removed from its context.redirectFrom and redirect.from', async() => {
+          it('commands.redirect() should not produce double slashes in redirect.from and the next action\'s context.redirectFrom', async() => {
             let from = '';
             router.setRoutes([
               {path: '/', children: [
@@ -1168,28 +1194,9 @@
             expect(outlet.children[0].tagName).to.match(/x-home-view/i);
             expect(from).to.be.equal('/c');
           });
-
-          it('should match routes with trailing slashes', async() => {
-            router.setRoutes([
-              {path: '/', component: 'x-a'},
-              {path: '/child', children: [
-                {path: '/', component: 'x-b'},
-                {path: '/page/', component: 'x-c'}
-              ]},
-            ]);
-
-            await router.render('/');
-            checkOutlet(['x-a']);
-
-            await router.render('/child/');
-            checkOutlet(['x-b']);
-
-            await router.render('/child/page/');
-            checkOutlet(['x-c']);
-          });
         });
 
-        describe('children (function)', () => {
+        describe('route.children (function)', () => {
           let router;
           beforeEach(() => {
             router = new Vaadin.Router(outlet);
