--- a/demo/demo-elements/x-breadcrumbs.html
+++ b/demo/demo-elements/x-breadcrumbs.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../../../polymer/polymer-element.html">
 <link rel="import" href="../../../polymer/lib/elements/dom-repeat.html">
 <link rel="import" href="../../../polymer/lib/elements/dom-if.html">
+<link rel="import" href="../../../vaadin-themable-mixin/vaadin-themable-mixin.html">
 
 <dom-module id="x-breadcrumbs">
   <template preserve-content>
@@ -23,7 +24,7 @@
     </dom-repeat>
   </template>
   <script>
-    class XBreadcrumbs extends Polymer.Element {
+    class XBreadcrumbs extends Vaadin.ThemableMixin(Polymer.Element) {
       static get is() {
         return 'x-breadcrumbs';
       }
