--- a/demo/demo-elements/x-home-view.html
+++ b/demo/demo-elements/x-home-view.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../../polymer/polymer-element.html">
+<link rel="import" href="../../../vaadin-themable-mixin/vaadin-themable-mixin.html">
 
 <dom-module id="x-home-view">
   <template>
@@ -12,7 +13,7 @@
   </template>
   <script>
     (() => {
-      class XHomeView extends Polymer.Element {
+      class XHomeView extends Vaadin.ThemableMixin(Polymer.Element) {
         static get is() {
           return 'x-home-view';
         }
