--- a/demo/demo-elements/x-image-view.html
+++ b/demo/demo-elements/x-image-view.html
@@ -1,3 +1,6 @@
+<link rel="import" href="../../../polymer/polymer-element.html">
+<link rel="import" href="../../../vaadin-themable-mixin/vaadin-themable-mixin.html">
+
 <dom-module id="x-image-view">
   <template preserve-content>
     <style>
@@ -9,7 +12,7 @@
     <div style$="height: [[location.params.size]]px; width: [[location.params.size]]px; background: [[location.params.color]];"></div>
   </template>
   <script>
-    class XImageView extends Polymer.Element {
+    class XImageView extends Vaadin.ThemableMixin(Polymer.Element) {
       static get is() {
         return 'x-image-view';
       }
