--- a/demo/demo-elements/x-not-found-view.html
+++ b/demo/demo-elements/x-not-found-view.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../../polymer/polymer-element.html">
+<link rel="import" href="../../../vaadin-themable-mixin/vaadin-themable-mixin.html">
 
 <dom-module id="x-not-found-view">
   <template>
@@ -13,7 +14,7 @@
   </template>
   <script>
     (() => {
-      class XNotFoundView extends Polymer.Element {
+      class XNotFoundView extends Vaadin.ThemableMixin(Polymer.Element) {
         static get is() {
           return 'x-not-found-view';
         }
