--- a/demo/demo-elements/x-user-list.html
+++ b/demo/demo-elements/x-user-list.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../../polymer/polymer-element.html">
+<link rel="import" href="../../../vaadin-themable-mixin/vaadin-themable-mixin.html">
 
 <dom-module id="x-user-list">
   <template>
@@ -17,7 +18,7 @@
   </template>
   <script>
     (() => {
-      class XUserList extends Polymer.Element {
+      class XUserList extends Vaadin.ThemableMixin(Polymer.Element) {
         static get is() {
           return 'x-user-list';
         }
