--- a/demo/demo-elements/x-user-not-found-view.html
+++ b/demo/demo-elements/x-user-not-found-view.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../../polymer/polymer-element.html">
+<link rel="import" href="../../../vaadin-themable-mixin/vaadin-themable-mixin.html">
 
 <dom-module id="x-user-not-found-view">
   <template>
@@ -14,7 +15,7 @@
   </template>
   <script>
     (() => {
-      class XUserNotFoundView extends Polymer.Element {
+      class XUserNotFoundView extends Vaadin.ThemableMixin(Polymer.Element) {
         static get is() {
           return 'x-user-not-found-view';
         }
