--- a/demo/vaadin-router-demo-shared-styles.html
+++ b/demo/vaadin-router-demo-shared-styles.html
@@ -1,5 +1,8 @@
 <link rel="import" href="../../polymer/polymer-element.html">
 
+<link rel="import" href="../../vaadin-lumo-styles/typography.html">
+<link rel="import" href="../../vaadin-lumo-styles/color.html">
+
 <dom-module id="vaadin-router-demo-shared-styles">
   <template>
     <style>
